// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter selector renders correctly 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <FilterSelector
    defaultFilter="contains"
    onChange={[Function]}
  />
  <input
    className="form-control filter-input"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Filter selector renders correctly when not adjustable by user 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <input
    className="form-control"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Filter selector renders correctly with ariaLabel 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <FilterSelector
    defaultFilter="contains"
    onChange={[Function]}
  />
  <input
    aria-label="my label"
    className="form-control filter-input"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;
